
- #882: Add fold_left, fold_right, exists and for_all to String/Bytes
  (Yotam Barnoy, review by Alain Frisch and Jeremy Yallop)

- #4070, #10398: small optimization of Stdlib.{frexp,modf}.
  (Markus Mottl, Nicolás Ojeda Bär, review by Gabriel Scherer)

- #10389, #10391, #10392: Add {Int,Int32,Int64,Nativeint}.{min,max}.
  (Nicolás Ojeda Bär and Alain Frisch, review by Xavier Leroy)

### Other libraries:

- #10047: Add `Unix.realpath`
  (Daniel Bünzli, review by David Allsopp, Josh Berdine and Gabriel Scherer)

* #10084: Unix.open_process_args* functions now look up the program in the PATH.
  This was already the case under Windows, but this is now also done under
  Unix. Note that previously the program was interpreted relative to the current
  directory.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

- #10184: Remove expensive debug assertion from dynlink.
  (Leo White, review by David Allsopp and Xavier Leroy)

- #10185: Consider that IPv6 is always enabled on Windows.
  (Antonin Décimo, review by David Allsopp and Xavier Leroy)

- #10306: Map WSA error code to Unix errno for sockopt and getsockname
  functions (Antonin Décimo, review by David Allsopp)

- #10309: Properly return EBADF on error in Unix.descr_of_{in,out}_channel on
  Win32 and map Windows error correctly in Unix.truncate and Unix.ftruncate on
  Win32.
  (David Allsopp, review by Nicolás Ojeda Bär)

### Tools:

- #8645, #10363: ocamldoc: escape `<`, `>`, and `&` in html backend.
  (Florian Angeletti, report by Wim Lewis, review by Gabriel Scherer)

- #10139: Remove confusing navigation bar from stdlib documentation.
  Adds a -nonavbar option to ocamldoc, and uses it to improve navigation within
  the reference manual.
  (John Whitington, review by David Allsopp)

### Manual and documentation:

- #10247: Add initial tranche of examples to reference manual.
  Adds some eighty examples to the reference manual, principally to the
  expressions and patterns sections.