@@ -185,6 +185,10 @@ Working version
 - #10389, #10391, #10392: Add {Int,Int32,Int64,Nativeint}.{min,max}.
   (Nicolás Ojeda Bär and Alain Frisch, review by Xavier Leroy)
 
+- #10115: Add List.split_map.
+  (Craig Ferguson, review by Gabriel Scherer, Nicolás Ojeda Bär and Damien
+  Doligez)
+
 ### Other libraries:
 
 - #10047: Add `Unix.realpath`
